RESOLVED FIXED129511
Deadlock remotely inspecting iOS Simulator
https://bugs.webkit.org/show_bug.cgi?id=129511
Summary Deadlock remotely inspecting iOS Simulator
Joseph Pecoraro
Reported 2014-02-28 15:23:41 PST
Often seeing a deadlock attempting to remotely inspect the iOS Simulator with the new remote connection path.
Attachments
[PATCH] Proposed Fix (4.97 KB, patch)
2014-02-28 15:35 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-28 15:24:13 PST
Joseph Pecoraro
Comment 2 2014-02-28 15:35:35 PST
Created attachment 225501 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2014-02-28 18:46:05 PST
Comment on attachment 225501 [details] [PATCH] Proposed Fix Clearing flags on attachment: 225501 Committed r164902: <http://trac.webkit.org/changeset/164902>
WebKit Commit Bot
Comment 4 2014-02-28 18:46:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.