Deadlock remotely inspecting iOS Simulator https://bugs.webkit.org/show_bug.cgi?id=129511

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-02-28
Reviewed by Timothy Hatcher.

Avoid synchronous setup. Do it asynchronously, and let
the RemoteInspector singleton know later if it failed.

* inspector/remote/RemoteInspector.h:
* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::setupFailed):
* inspector/remote/RemoteInspectorDebuggableConnection.h:
* inspector/remote/RemoteInspectorDebuggableConnection.mm:
(Inspector::RemoteInspectorDebuggableConnection::setup):

Canonical link: https://commits.webkit.org/147582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164902 268f45cc-cd09-0410-ab3c-d52691b4dbfc