Source/JavaScriptCore/inspector/remote/RemoteInspectorDebuggableConnection.mm
@@ -68,18 +68,6 @@ NSString *RemoteInspectorDebuggableConnection::connectionIdentifier() const
     return [[m_connectionIdentifier copy] autorelease];
 }
 
-void RemoteInspectorDebuggableConnection::dispatchSyncOnDebuggable(void (^block)())
-{
-    if (m_queueForDebuggable)
-        dispatch_sync(m_queueForDebuggable, block);
-#if PLATFORM(IOS)
-    else if (WebCoreWebThreadIsEnabled && WebCoreWebThreadIsEnabled())
-        WebCoreWebThreadRunSync(block);
-#endif
-    else
-        dispatch_sync(dispatch_get_main_queue(), block);
-}
-
 void RemoteInspectorDebuggableConnection::dispatchAsyncOnDebuggable(void (^block)())
 {
     if (m_queueForDebuggable)
@@ -99,18 +87,22 @@ bool RemoteInspectorDebuggableConnection::setup()
     if (!m_debuggable)
         return false;
 
-    dispatchSyncOnDebuggable(^{
-        if (!m_debuggable->remoteDebuggingAllowed())
-            return;
-
-        if (m_debuggable->hasLocalDebugger())
-            return;
-
-        m_debuggable->connect(this);
-        m_connected = true;
+    ref();
+    dispatchAsyncOnDebuggable(^{
+        {
+            std::lock_guard<std::mutex> lock(m_debuggableMutex);
+            if (!m_debuggable || !m_debuggable->remoteDebuggingAllowed() || m_debuggable->hasLocalDebugger()) {
+                RemoteInspector::shared().setupFailed(identifier());
+                m_debuggable = nullptr;
+            } else {
+                m_debuggable->connect(this);
+                m_connected = true;
+            }
+        }
+        deref();
     });
 
-    return m_connected;
+    return true;
 }
 
 void RemoteInspectorDebuggableConnection::closeFromDebuggable()
